# cross_agent_session_resumer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
.claude/skills/casr-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
.hashline/hashes/src/providers/: opencode.lhhash
.omo/run-continuation/: ses_1603ce71cffeM09aBCPkQrIsDD.json
.opencode/: opencode.db
docs/: JCODE_PROVIDER_PLAN.md
scripts/: e2e_test.sh
src/: discovery.rs  main.rs  model.rs  pipeline.rs  responses.rs
src/providers/: aider.rs  amp.rs  antigravity.rs  chatgpt.rs  claude_code.rs  clawdbot.rs  cline.rs  codex.rs  cursor.rs  factory.rs  gemini.rs  grok.rs  hermes.rs  jcode.rs  kiro.rs  mod.rs  openclaw.rs  opencode.rs  pi_agent.rs  vibe.rs
tests/: atomic_write_test.rs  cli_e2e_test.rs  cline_storage_roots_test.rs  error_paths_test.rs  fixtures_test.rs  golden_output_test.rs  json_contract_test.rs  kiro_test.rs  pipeline_test.rs  real_world_roundtrip_test.rs  roundtrip_test.rs  trace_event_test.rs  verbose_trace_test.rs  writer_test.rs
tests/fixtures/: fixtures_manifest.json
tests/fixtures/antigravity/antigravity-cli/brain/aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee/.system_generated/logs/: transcript.jsonl
tests/fixtures/antigravity/antigravity-cli/conversations/: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.db
tests/fixtures/antigravity/tmp/deadbeefhash/chats/: session-gmi-legacy-001.json
tests/fixtures/expected/: agy_simple.json  opc_simple.json  piagent_simple.json
tests/fixtures/kiro/: 0a5376f2-7e2f-4981-bcbc-67195586604a.history  0a5376f2-7e2f-4981-bcbc-67195586604a.json  0a5376f2-7e2f-4981-bcbc-67195586604a.jsonl
